--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
         
         <div class="sub-tabs">
             <button class="sub-tab-btn active" onclick="showTeaser('2025-awards', '2025연말결산티저.mp4', '2025 연말결산 티저')">2025 연말결산</button>
-            <button class="sub-tab-btn" onclick="showTeaser('2026-olactruck', '', '2026 오락트럭 예고')">2026 오락트럭</button>
+            <button class="sub-tab-btn" onclick="showTeaser('2026-olactruck', '', '공주의 조건')">공주의 조건</button>
         </div>
 
         <div id="teaser-content" class="sub-section active" style="max-width: 900px; margin: 0 auto;">
@@ -1206,22 +1206,22 @@
                 // [요청사항] '올해의 가수'를 치면 '박현아공주.png'
                 '올해의 가수': { 
                     image: '박현아공주.png', 
-                    description: '👑 박현아 공주: 올해의 가수로 등극한 그녀의 매혹적인 무대. 압도적인 보컬 실력으로 4차 티저에 이름을 올렸습니다.' 
+                    description: "라푼젤: 당신의 역할은 프로이센의 공주 '라푼젤'입니다. 태어날때부터 로열패밀리라는 자부심이 있는 당신은 엘사의 여왕 즉위식에 참석합니다. 공주의 품위를 지켜주십시오."
                 },
                 // [요청사항] '최고의 플레이어'를 치면 '김승주공주.png'
                 '최고의 플레이어': { 
                     image: '김승주공주.png', 
-                    description: '♟️ 김승주 공주: 냉철한 판단력과 뛰어난 게임 이해도를 가진 최고의 플레이어. 그녀의 지략이 왕실을 뒤흔들 것입니다.' 
+                    description: "백설공주: 당신의 역할은 작센의 새 왕비 '이블퀸'입니다. 다만, 백설공주를 독사과를 먹여 살해하고, 백설공주인척 살아가기로 정했습니다. 당신은 엘사의 여왕 즉위식에 참석합니다. 공주의 품위를 지켜 당신의 정체가 탄로나지 않고 다른 공주를 이 모임에서 내쫓아야합니다."
                 },
                 // [요청사항] '선거의 여왕': '유은비공주.png'
                 '선거의 여왕': { 
                     image: '유은비공주.png', 
-                    description: '🗳️ 유은비 공주: 압도적인 득표율로 선거에서 승리한 여왕. 그녀의 카리스마와 리더십을 4차 티저에서 확인하세요.' 
+                    description: "신데렐라: 당신의 역할은 프랑스의 왕세자비 '신데렐라'입니다. 당신은 엘사의 여왕 즉위식에 참석합니다. 공주의 품위를 지켜주십시오. 결혼을 통해 왕실에 입성한 당신은 진정한 로열패밀리가 아니라는 시선을 받고 있습니다. 부디 품위를 지켜 프랑스의 얼굴이 되십시오."
                 },
-                // [요청사항] '여왕': '강병주공주.png'
+                // [요청사항] '여왕': '강병주공주2.png'
                 '여왕': { 
-                    image: '강병주공주.png', 
-                    description: '👸 강병주 공주: 모든 세계관을 지배하는 오락트럭의 여왕. 그녀의 최종 메시지는 무엇일까요?' 
+                    image: '강병주공주2.png', 
+                    description: "엘사: 아버지와 어머니를 한날 한시에 잃고 슬픔 속에 지내던 공주가 드디어 아란델의 주인이 되는 즉위식을 하게 됩니다. 엘사의 즉위식에 초대받은 공주님들. 부디 즐거운 시간 보내시길." 
                 }
             };
             
